--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,5 +12,6 @@ collections:
   - label: Songs
     name: songs
     folder: songs
+    create: true
     fields:
       - {label: "Name", name: "name", widget: "string"}
